# onchain-ai

./: .gitignore  README.md
contract/: Cargo.toml  build_docker.sh  build_local.sh
contract/res/: release.wasm
contract/src/: lib.rs  request.rs  response.rs
respond_bot/: package.json  run.sh
respond_bot/src/: ai.js  bot.js  index.js  near.js  utils.js
